<resources>
    <string name="app_name">Trivia App</string>
    <string name="your_name">Q. What is your Name?</string>
    <string name="name">Name</string>
    <string name="next">Next</string>
    <string name="best_cricketer">Q. Who is the best cricketer in the world?</string>
    <string name="sachin_tendulkar">Sachin Tendulkar</string>
    <string name="virat_kolli">Virat Kolli</string>
    <string name="adam_gilchirst">Adam Gilchirst</string>
    <string name="jacques_kallis">Jacques Kallis</string>
    <string name="national_flag">Q. What are the colors in the Indian national flag? Select all:</string>
    <string name="white">White</string>
    <string name="yellow">Yellow</string>
    <string name="orange">Orange</string>
    <string name="green">Green</string>
    <string name="hello">Hello</string>
    <string name="answers_selected">Here are the answers selected:</string>
    <string name="ans">Ans:</string>
    <string name="national_flag_q">Q. What are the colors in the Indian national flag?</string>
    <string name="finish">Finish</string>
    <string name="history">History</string>
    <string name="semicolon">:</string>
    <string name="app_logo">app logo</string>
</resources>
